Default settings consistent between options page and content page

--- a/options.html
+++ b/options.html
@@ -10,6 +10,7 @@ Show Blocked As Red: <input id="blockedAsRed" type="checkbox"></input>
 <button id="save">Save</button>
 </body>
 
+<script src="settings.js"></script>
 <script src="options.js"></script>
 
 </html>
